initial header, beginning of home page for warehouse 701

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,5 @@
 /*
  * Breakpoints mixin. Makes media queries easier.
- * Choose a point from the defined variable $brkpts in _variables.scss or set your own.
  */
 /**
  * @source https://github.com/thoughtbot/bourbon/blob/v4-stable/app/assets/stylesheets/functions/_px-to-rem.scss
@@ -105,12 +104,7 @@ img {
   max-width: 100%; }
 
 /**
- * Taken from Twentysixteen theme:
- *
- * 1.0 - Normalize
- *
- * Normalizing styles have been helped along thanks to the fine work of
- * Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
+ * Taken from: Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
  */
 html {
   font-family: sans-serif;
@@ -226,7 +220,7 @@ input[type="submit"] {
 button[disabled],
 html input[disabled] {
   cursor: default;
-  opacity: .5; }
+  opacity: 0.5; }
 
 button::-moz-focus-inner,
 input::-moz-focus-inner {
@@ -282,35 +276,39 @@ textarea {
 optgroup {
   font-weight: bold; }
 
-/* ===========================================================
-  Typography
-============================================================ */
 html {
   font-size: 62.5%; }
 
 body {
-  font-family: "Helvetica";
-  color: #000; }
+  background-color: #f3efe8;
+  font-family: "Open Sans";
+  line-height: 1.6;
+  color: #111; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Slabo 27px"; }
 
 h1 {
-  font-size: 3.6rem;
-  padding: 30px 0; }
+  font-size: 3.6rem; }
 
 h2 {
   font-size: 3.2rem; }
 
 h3 {
-  font-size: 2.8rem;
-  line-height: 3.6rem; }
+  font-size: 2.8rem; }
 
 p {
-  font-size: 2.4rem;
-  line-height: 3.6rem; }
+  font-size: 2rem; }
 
 a {
   font-size: 1.8rem;
   text-decoration: none;
-  color: #000;
+  color: #111;
   letter-spacing: 1px; }
   a:hover {
     color: #999;
@@ -326,114 +324,25 @@ li {
   list-style: none; }
 
 span {
-  font-size: 2.4rem;
-  line-height: 3.6rem; }
+  font-size: 2.4rem; }
 
 pre {
   word-wrap: break-word; }
 
-.center {
-  text-align: center; }
-
-.whitetext {
-  color: white; }
-
-/* ===========================================================
-  Utility
-============================================================ */
-/* ===========================================================
-  Variables
-============================================================ */
-/* ===========================================================
-  Display
-============================================================ */
-.flexing {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap; }
-
-.flex-simple {
-  display: flex;
-  align-items: center; }
-
-.flex-column {
-  flex-direction: column; }
-
-.overlay {
-  opacity: 1;
-  background: rgba(40, 40, 40, 0.8);
-  text-align: center;
-  line-height: 2.33em;
-  align-self: flex-end;
-  height: 75px; }
-  @media (min-width: 980px) {
-    .overlay {
-      height: inherit;
-      opacity: 0;
-      padding: 0 20%;
-      align-self: auto; }
-      .overlay:hover {
-        opacity: 1; } }
-
-.margin-edge {
-  margin: 0 10px; }
-  @media (min-width: 768px) {
-    .margin-edge {
-      margin: 0 2%; } }
-  @media (min-width: 980px) {
-    .margin-edge {
-      margin: 0 4%; } }
-.margin-top {
-  margin-top: 30px; }
-.margin-bottom {
-  margin-bottom: 30px; }
-.margin-right {
-  margin-right: 30px; }
-.margin-left {
-  margin-left: 30px; }
-
-.pad {
-  padding: 10px; }
-  .pad-top {
-    padding-top: 10px; }
-  .pad-bottom {
-    padding-bottom: 10px; }
-  .pad-left {
-    padding-left: 10px; }
-  .pad-right {
-    padding-right: 10px; }
-
-.none-tablet {
-  display: none; }
-  @media (min-width: 768px) {
-    .none-tablet {
-      display: inherit; } }
-.none-smallscreen {
-  display: none; }
-  @media (min-width: 980px) {
-    .none-smallscreen {
-      display: inherit; } }
-
-.float-left {
-  float: left; }
-.float-right {
-  float: right; }
-
-.group:after {
-  content: "";
-  display: table;
-  clear: both; }
-
-.border-bottom {
-  border-bottom: 2px solid #404040; }
-
-.border-top {
-  border-top: 2px solid #404040; }
-
-.off-screen {
-  position: absolute;
-  left: -5000px; }
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+section,
+header,
+footer,
+nav,
+main {
+  box-sizing: border-box; }
 
 #wpadminbar {
   top: 0; }
@@ -441,111 +350,98 @@ pre {
 /* ===========================================================
   Navigation
 ============================================================ */
-@media (min-width: 768px) {
-  #menu-main-menu, #menu-footer-menu {
+@media only screen and (min-width: 800px) {
+  #menu-main-menu,
+  #menu-footer-menu {
     padding: 20px 0; } }
-#menu-main-menu li, #menu-footer-menu li {
+#menu-main-menu li,
+#menu-footer-menu li {
   text-align: center; }
-#menu-main-menu a, #menu-footer-menu a {
+#menu-main-menu a,
+#menu-footer-menu a {
   font-weight: 700; }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 800px) {
   #menu-main-menu {
     margin: 20px 10%; } }
 
 .menu-item {
   width: 100%;
   margin: 10px 0; }
-  @media (min-width: 768px) {
+  @media only screen and (min-width: 800px) {
     .menu-item {
       width: auto;
       margin: 0; } }
 
-/* ===========================================================
-  Sizing
-============================================================ */
-/*
-  Width Styling
- */
-.width-onehundred {
-  width: 100%; }
-
-.width-max {
-  width: 95%;
-  max-width: 80rem;
-  margin-right: auto;
-  margin-left: auto; }
-
-.width-half {
-  width: 95%; }
-  @media (min-width: 768px) {
-    .width-half {
-      width: 48%; } }
-
-.width-third {
-  width: 95%; }
-  @media (min-width: 768px) {
-    .width-third {
-      width: 48%; } }
-  @media (min-width: 980px) {
-    .width-third {
-      width: 30%; } }
-
-.width-fourth {
-  width: 95%; }
-  @media (min-width: 500px) {
-    .width-fourth {
-      width: 48%; } }
-  @media (min-width: 768px) {
-    .width-fourth {
-      width: 31%; } }
-  @media (min-width: 980px) {
-    .width-fourth {
-      width: 23%; } }
-
-/*
-  Height styling
- */
-.height-small {
-  height: 100px; }
-
-.height-med {
-  height: 200px; }
-
-.height-large {
-  height: 300px; }
-
-.bg-img {
-  background-position: center;
-  background-size: cover; }
-
-/* ===========================================================
-  Icons
-============================================================ */
 .social-media svg {
   height: 54px;
   width: 54px;
-  fill: #212121; }
+  fill: #111; }
   .social-media svg:hover {
-    fill: #909090; }
+    fill: #999; }
 
-/* ===========================================================
-  Header
-============================================================ */
-header {
-  padding-top: 10px; }
+.site-header {
+  background-color: #111;
+  display: flex;
+  padding: 10px;
+  position: relative;
+  justify-content: space-between; }
+  .site-header__title {
+    color: #f3efe8;
+    font-size: 2.6rem;
+    letter-spacing: 11px;
+    line-height: 1.2;
+    padding: 10px 0;
+    margin: 0; }
+  .site-header__link {
+    margin-left: 130px; }
 
-/* ===========================================================
-  Footer
-============================================================ */
+.header-circle {
+  border: 2px solid #f3efe8;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #111;
+  position: absolute;
+  top: 5px;
+  left: 25px;
+  height: 90px;
+  width: 90px; }
+  .header-circle__inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f3efe8;
+    border: 1px solid #111;
+    border-radius: 50%;
+    height: 90%;
+    width: 90%; }
+  .header-circle__text {
+    font-size: 44px;
+    font-family: "Slabo 27px";
+    color: black; }
+
 footer {
   margin: 30px 0; }
 
-/* ===========================================================
-  Front Page
-============================================================ */
-/* ===========================================================
-  Content
-============================================================ */
+.home-hero {
+  height: 300px;
+  background-size: cover;
+  background-attachment: fixed; }
+  @media only screen and (min-width: 640px) {
+    .home-hero {
+      height: 400px; } }
+  @media only screen and (min-width: 800px) {
+    .home-hero {
+      height: 500px; } }
+  @media only screen and (min-width: 960px) {
+    .home-hero {
+      height: 600px; } }
+
+.home-content {
+  max-width: 87rem;
+  margin: 0 auto 0 12%;
+  padding: 2rem; }
 
 /*# sourceMappingURL=app.css.map */
