--- a/assets/sass/utility/_variables.scss
+++ b/assets/sass/utility/_variables.scss
@@ -2,7 +2,10 @@ $primary-font: "Open Sans"; // 'Open Sans'
 $secondary-font: "Slabo 27px"; // 'Slabo'
 
 // Colors
-$black: #111;
+$black: #18121e;
+$blue: #233237;
+$red: #984b43;
+$yellow: #eac67a;
 $gray: #999;
 $cream: #f3efe8;
 $hover-color: $gray;
