--- a/assets/sass/templates/_front-page.scss
+++ b/assets/sass/templates/_front-page.scss
@@ -15,17 +15,22 @@
 }
 
 .home-about {
-  max-width: 87rem;
-  padding: 2rem 1rem;
+  display: flex;
+  flex-wrap: wrap;
 
-  @include bp(xs) {
-    padding: 2rem;
+  @include bp(md) {
+    flex-wrap: nowrap;
   }
-  @include bp(lg) {
-    margin: 0 auto;
+  &__left {
   }
-  @include bp(xl) {
-    margin: 0 auto 0 12%;
+  &__right {
+  }
+}
+
+.home-spaces-section {
+  background-color: $blue;
+  &__title {
+    color: white;
   }
 }
 
@@ -35,7 +40,7 @@
 
   @include bp(lg) {
     flex-direction: column;
-    height: 800px;
+    height: 600px;
   }
 }
 
@@ -43,20 +48,38 @@
   background-size: cover;
   width: 100%;
 
-  &__image {
-    height: 300px;
-  }
-
   @include bp(lg) {
-    height: 400px;
+    height: 300px;
     width: 38%;
     &:first-of-type {
-      height: 800px;
+      height: 600px;
       width: 62%;
-
-      .home-space__image {
-        height: 600px;
-      }
     }
   }
+}
+
+.home-history {
+  &__image {
+    background-size: cover;
+    height: 100px;
+
+    @include bp(sm) {
+      height: 160px;
+    }
+    @include bp(md) {
+      height: 200px;
+    }
+  }
+}
+
+.circles-section {
+  display: flex;
+  justify-content: space-around;
+}
+
+.home-circle {
+  height: 20rem;
+  width: 20rem;
+  border: 2px solid $black;
+  border-radius: 50%;
 }
