--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -1,5 +1,5 @@
 .site-header {
-  background-color: $black;
+  background-color: $blue;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -10,7 +10,7 @@
   width: 100%;
   transition: padding 300ms ease-in-out;
   &__title {
-    color: $cream;
+    color: $yellow;
     font-size: 2.6rem;
     letter-spacing: 11px;
     line-height: 1.2;
@@ -29,12 +29,12 @@
 }
 
 .header-circle {
-  border: 2px solid $cream;
+  border: 2px solid white;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $black;
+  background-color: $red;
   position: absolute;
   top: 5px;
   transform: scale(1);
@@ -47,15 +47,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: $cream;
-    border: 1px solid $black;
+    background-color: white;
     border-radius: 50%;
-    height: 90%;
-    width: 90%;
+    height: 95%;
+    width: 95%;
   }
   &__text {
     font-size: 44px;
     font-family: $secondary-font;
-    color: black;
+    color: $black;
+  }
+}
+
+// Adjust for admin menu
+.admin-bar {
+  .site-header {
+    top: 46px;
+    @include bp(782px) {
+      top: 32px;
+    }
   }
 }
