--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background-color: $cream;
+  background-color: white;
   font-family: $primary-font;
   line-height: 1.6;
   color: $black;
