--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -9,6 +9,7 @@
   left: 0px;
   width: 100%;
   transition: padding 300ms ease-in-out;
+  z-index: 10;
   &__title {
     color: $yellow;
     font-size: 2.6rem;
