--- a/assets/sass/utility/_variables.scss
+++ b/assets/sass/utility/_variables.scss
@@ -6,5 +6,6 @@ $black: #18121e;
 $blue: #233237;
 $red: #984b43;
 $yellow: #eac67a;
-$cream: #f3efe8;
+$trans-tan: rgba(216, 216, 216, 0.9);
+$trans-gray: rgba(35, 15, 58, 0.8);
 $hover-color: $blue;
