--- a/assets/sass/templates/_front-page.scss
+++ b/assets/sass/templates/_front-page.scss
@@ -70,34 +70,62 @@
   }
 }
 
-.home-spaces-section {
-  background-color: $blue;
+.home-spaces {
+  background-color: white;
+  padding: 8rem 0;
+
+  @include bp(md) {
+    padding: 8rem 2rem;
+  }
   &__title {
     color: white;
   }
 }
 
-.home-spaces {
-  display: flex;
-  flex-wrap: wrap;
-
-  @include bp(lg) {
-    flex-direction: column;
-    height: 600px;
-  }
-}
-
 .home-space {
-  background-size: cover;
-  width: 100%;
+  &__image {
+    position: relative;
+    height: 220px;
+    width: 100%;
+    overflow: hidden;
 
-  @include bp(lg) {
-    height: 300px;
-    width: 38%;
-    &:first-of-type {
-      height: 600px;
-      width: 62%;
+    @include bp(md) {
+      height: 416px;
+      width: 50%;
     }
+  }
+  &__overlay {
+    background-color: $trans-gray;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+  }
+  &__title {
+    position: absolute;
+    left: 30%;
+    top: 50%;
+    font-size: 3.6rem;
+    color: $yellow;
+    border-bottom: 3px solid $red;
+    width: 80%;
+    margin: 0;
+
+    @include bp(md) {
+      left: 50%;
+    }
+  }
+  &__text {
+    padding: 4rem 2rem;
+  }
+  &__title-two {
+    margin: 0 0 1rem;
+    font-size: 2.4rem;
+    color: $red;
+  }
+  &__description {
+    margin-bottom: 3rem;
   }
 }
 
