--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,12 +1,14 @@
 // Import utility index
-@import "utility/index";
+@import 'utility/index';
 
 // Import base index
-@import "base/index";
+@import 'base/index';
 
 // Import components index
-@import "components/index";
+@import 'components/index';
 
 // Import templates index
-@import "templates/index";
+@import 'templates/index';
 
+// Import vendors index
+@import 'vendors/index';
