--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -4,10 +4,63 @@
   border-radius: 5px;
   color: $yellow;
   font-size: 2rem;
+  text-align: center;
   transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
 
   &:hover {
     background-color: lighten($blue, 10%);
     color: lighten($yellow, 10%);
+  }
+}
+
+// Slick slider buttons
+.slick-nav {
+  display: none;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: transform 400ms ease-in-out;
+  width: 10%;
+  z-index: 2;
+
+  @include bp(md) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  span {
+    display: block;
+    width: 40px;
+    height: 40px;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+  }
+
+  &__prev {
+    left: 0;
+
+    &.slick-disabled {
+      transform: translateX(-100%);
+    }
+
+    span {
+      transform: rotate(135deg);
+    }
+  }
+  &__next {
+    right: 0;
+
+    &.slick-disabled {
+      transform: translateX(100%);
+    }
+
+    span {
+      transform: rotate(-45deg);
+    }
   }
 }
