--- a/assets/sass/templates/_front-page.scss
+++ b/assets/sass/templates/_front-page.scss
@@ -83,6 +83,10 @@
 }
 
 .home-space {
+  @include bp(md) {
+    display: flex;
+    margin-left: 10%;
+  }
   &__image {
     position: relative;
     height: 220px;
@@ -92,6 +96,7 @@
     @include bp(md) {
       height: 416px;
       width: 50%;
+      overflow: visible;
     }
   }
   &__overlay {
@@ -149,12 +154,37 @@
   &__content {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+
+    @include bp(md) {
+      flex-wrap: nowrap;
+    }
   }
 }
 
 .home-circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 20rem;
   width: 20rem;
-  border: 2px solid $black;
+  border: 2rem solid $blue;
   border-radius: 50%;
+  margin-bottom: 3rem;
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid $blue;
+    border-radius: 50%;
+    margin: 1rem;
+    width: 100%;
+    height: 100%;
+  }
+  &__text {
+    font-size: 2.4rem;
+    color: $red;
+    padding: 0 2rem;
+    text-align: center;
+  }
 }
